<resources>
    <string name="app_name">Pexel Application</string>
    <string name="search_here">Search Here...</string>
    <string name="preference_file_key">MY_APP_PREF</string>
    <string name="search">Search</string>
    <string name="recent_searches">Recent</string>
    <string name="grid">Grid</string>
    <string name="linear">Linear</string>
    <string name="photographer_name">Photographer Name</string>
    <string name="photographer_pexel_url">Pexel Url</string>
</resources>

