<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:hint="@string/search_here"
        android:imeOptions="actionGo"
        android:lines="1"
        android:maxLines="1"
        android:paddingRight="20dp"
        android:singleLine="true"
        app:drawableEndCompat="@drawable/search_icon"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/sm_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/grid"
        app:layout_constraintBottom_toTopOf="@id/tv_recent_search"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_search" />


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_recent_search"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/recent_searches"
        android:textAppearance="?textAppearanceHeadline6"
        app:layout_constraintTop_toBottomOf="@id/sm_layout" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_fav_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/tv_recent_search"
        tools:listitem="@layout/item_photo" />


</androidx.constraintlayout.widget.ConstraintLayout>